fixes for uploading image: Modify counting from zero :D,cross image overlapping spinning image,url upload image get's replaced by empty string,fix numbers from image because get's repeated their number when data already is avaible, add suport for sending custom data

--- a/addon/img.css
+++ b/addon/img.css
@@ -45,8 +45,6 @@
     50%{stroke-dasharray:89,200;stroke-dashoffset:-35;}
     100%{stroke-dasharray:89,200;stroke-dashoffset:-124;}
 }
-/*spinning*/
-
 .yaposi-img input{
     display: none;
 }
@@ -91,4 +89,7 @@
 }
 .yaposi-img{
     width: 350px;
+}
+.yaposi-img-cross{
+    display: none;
 }
